Fix Steam ID help text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <div class="tooltip">
                         <span class="tooltip-icon">?</span>
                         <span class="tooltip-text">To find your Steam ID, you can use www.steamfinder.com to look up
-                            your 64-digit ID. You can also use your Custom URL, which can be set by editing your Steam
+                            your 64-bit Steam ID. You can also use your Custom URL, which can be set by editing your
+                            Steam
                             Profile.</span>
                     </div>
                 </div>
